<resources>
    <string name="app_name">News Feed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="txt_user_name">Moahmed Abd EL Sattar</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_open_website">OPEN WEBSITE</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_live_chat">Live Chat</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_wish_list">Wish List</string>
    <string name="nav_e_magazine">E-Magazine</string>
    <string name="txt_error">Error Getting Data</string>
    <string name="txt_no_articles">There is no Articles Right now!</string>
</resources>
