<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/explore"
            android:title="@string/nav_explore"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/live"
            android:title="@string/nav_live_chat"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/gallery"
            android:title="@string/nav_gallery"/>
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/wishlist"
            android:title="@string/nav_wish_list"/>
        <item
            android:id="@+id/nav_e_magazine"
            android:icon="@drawable/e_magazine"
            android:title="@string/nav_e_magazine"/>
    </group>

</menu>
