<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/navdrawer_profile_image_size"
        android:layout_height="@dimen/navdrawer_profile_image_size"
        android:layout_marginStart="@dimen/nav_header_horizontal_spacing"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/profile"/>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_horizontal_margin"
        android:layout_marginTop="@dimen/text_vertical_margin"
        android:layout_toStartOf="@+id/img"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/txt_welcome"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtName"
        android:layout_marginStart="@dimen/text_horizontal_margin"
        android:layout_toStartOf="@+id/img"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/txt_user_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"/>

    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/navheader_icon"
        android:layout_height="@dimen/navheader_icon"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/arrow"/>
</RelativeLayout>
